# h100_gemm

./: CMakeLists.txt  Makefile  README.md  environment.yml  profiling_main.cu
notes/: SMEM-bank-conflicts.md  Warptiling.md
profiling_reports/: s1D_register_tiling.ncu-rep  sgemm_2D_registertiling.ncu-rep  sgemm_tiled_shared.ncu-rep  sgemm_vectorised.ncu-rep  sgemm_warptiling.ncu-rep  wgmma_tma_shapes-256threads.ncu-rep  wgmma_tma_shapes.ncu-rep
profiling_reports/producer-consumer-pipeline/: pc_2wgs_2stages.ncu-rep  pc_2wgs_5stages.ncu-rep  pc_2wgs_5stages_epi_smem_staging.nsys-rep  pc_2wgs_5stages_epistage_padded.ncu-rep  pc_2wgs_5stages_epistaging.ncu-rep  pc_3wgs_5stages.ncu-rep  ref_orig.ncu-rep  ref_scaled.ncu-rep
scripts/: profile_with_ai.sh
src/: main.cu  profiling_main.cu  runner.cu  runner.cuh  utils.h
src/kernels/ampere/: gemm_1D_registertiling_bf16.cuh  gemm_2D_registertiling_bf16.cuh  gemm_tiled_shared_bf16.cuh  gemm_vectorised_bf16.cuh  gemm_warptiling_bf16.cuh  launcher.cu  launcher.cuh  sgemm_1D_blocktiling.cuh  sgemm_1D_registertiling.cuh  sgemm_2D_registertiling  sgemm_2D_registertiling.cuh  sgemm_naive.cuh  sgemm_tiled_shared.cuh  sgemm_vectorised.cuh  sgemm_warptiling.cuh
src/kernels/general/: gemm_coalesced_bf16.cuh  gemm_naive_bf16.cuh  launcher.cu  launcher.cuh  sgemm_tiled_shared.cuh  sgemm_vectorised_padded.cuh  sgemm_warptiling.cuh
src/kernels/hopper/: gemm_bf16_pc_pipeline.cuh  gemm_bf16_wgmma_tma.cuh  gemm_bf16_wgmma_tma_shapes.cuh  gemm_warptiling_bf16.cuh  gemm_warptiling_fp32.cuh  hopper_tma_utils.h  hopper_utils.cuh  hopper_wgmma_utils.cuh  launcher.cu  launcher.cuh
src/kernels/simon/: kernel01_naive.cu  kernel01_naive.cuh  launcher.cu  launcher.cuh  sgemm_tiled_shared.cuh  simon_coalesced.cuh  simon_naive.cuh
